--- a/Iris.Server/Iris.Server.csproj
+++ b/Iris.Server/Iris.Server.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\packages\SimpleInjector.2.3.0\lib\net40-client\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,10 +69,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IocRegister.cs" />
+    <Compile Include="Messages\KeyGenerator.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Transmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Receiver.cs" />
+    <Compile Include="MessageEndpoint.cs" />
+    <Compile Include="SimpleInjectorSignalR.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
