--- a/Iris.Server/packages.config
+++ b/Iris.Server/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.Owin.Security" version="1.1.0-beta2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.3.0" targetFramework="net451" />
 </packages>
